re PR middle-end/53321 (LTO bootstrap failed with bootstrap-profiled)

PR middle-end/53321
	* ipa.c (symtab_remove_unreachable_nodes): Partially revert r187375
	to not call cgraph_propagate_frequency if something was changed.

testsuite/ChangLog:

	PR middle-end/53321
	* g++.dg/torture/pr53321.C: New test.

From-SVN: r189261